# qtcolorizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
example/: CMakeLists.txt  colorizer.json  main.cpp  resources.qrc
example/ui/: mainwindow.ui
qtcolorizer/: CMakeLists.txt  qtcolorizer.cpp  qtcolorizer.h  qtcolorizer_p.h
utility/: CMakeLists.txt  colorize-your-qt.pro  main.cpp  resources.qrc
utility/CONTROL/: qtcolorizer.desktop
utility/core/: appsettings.cpp  appsettings.h  colordb.cpp  colordb.h  colorgroupmodel.cpp  colorgroupmodel.h  colorizermodel.cpp  colorizermodel.h  colortonemodel.cpp  colortonemodel.h  customcolormodel.cpp  customcolormodel.h  palettemodel.cpp  palettemodel.h  paletteprovider.h  types.h  widgetsetmodeldelegate.cpp  widgetsetmodeldelegate.h
utility/rc/: colorizer.json
utility/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addwidgetsetdialog.cpp  addwidgetsetdialog.h  addwidgetsetdialog.ui  colorchooser.cpp  colorchooser.h  colorchooser.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  testee.cpp  testee.h  testee.ui
